[package]
name = "substrate-access-test"
version = "0.1.0"
authors = ["zhoujun <zhoujun@hard-chain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core-client = { version = "12.0.0", features = ["http", "ws"] }
log = "0.4"
futures = "0.1.28"
hyper = "0.12.33"
hex = "0.3.2"
parity-codec = "4.1.3"
ed25519-dalek = {git = "https://github.com/dalek-cryptography/ed25519-dalek"}
rand = "0.7.0"
schnorrkel = "0.7.0"
sha2 = "0.8.0"
hex-literal = "0.2"

node-runtime = {git = "https://github.com/paritytech/substrate"}
substrate-rpc = {git = "https://github.com/paritytech/substrate"}
node-primitives = {git = "https://github.com/paritytech/substrate"}
sr-primitives = {git = "https://github.com/paritytech/substrate"}
srml-indices = {git = "https://github.com/paritytech/substrate"}
substrate-transaction-pool = {git = "https://github.com/paritytech/substrate"}
substrate-test-runtime = {git = "https://github.com/paritytech/substrate"}
substrate-keyring = {git = "https://github.com/paritytech/substrate"}
substrate-primitives = {git = "https://github.com/paritytech/substrate"}
srml-system = {git = "https://github.com/paritytech/substrate"}
sr-io = {git = "https://github.com/paritytech/substrate"}
srml-balances = {git = "https://github.com/paritytech/substrate"}
substrate-serializer = {git = "https://github.com/paritytech/substrate"}
